--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </p>
         </article>
 
-        <article id="online-reputation-management">
+        <article class="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" alt="Graph of upward trend with a title 'Reputation'." class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
@@ -47,7 +47,7 @@
             </p>
         </article>
 
-        <article id="social-media-marketing">
+        <article class="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" alt="Various application icons and social media tool icons" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
