--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 </head>
 
 <body>
+    <!-- Site Header-->
     <header>
+        <!-- h1 tag for important heading-->
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
+            <!-- Navigation links-->
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -22,15 +25,18 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
+            <!-- End of Navigation Links-->
         </div>
     </header>
-    
+    <!-- Figure-->
     <figure>
         <img src="../02-challenge/assets/images/digital-marketing-meeting.jpg" alt="Team of people gathering around a table meeting for digital marketing.">
     </figure>
-    
+    <!-- End of Figure-->
+    <!-- Main Content-->
     <section id="main">
-        <article class="search-engine-optimization">
+        <!-- Article for Search Engine Optimization-->
+        <article class="search-engine-optimization" id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="Brainstorm of SEO's optimization increasing visibility including heading, mobile compatibility,
             social media, link building, backlink and content." class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -38,16 +44,18 @@
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </article>
-
-        <article class="online-reputation-management">
+        <!-- End of Article for Search Engine Optimization-->
+        <!-- Article for Online Reputation Management-->
+        <article class="online-reputation-management" id="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" alt="Graph of upward trend with a title 'Reputation'." class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </article>
-
-        <article class="social-media-marketing">
+        <!-- End of Article for Online Reputation Management-->
+        <!-- Article for Social Media Marketing-->
+        <article class="social-media-marketing" id="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" alt="Various application icons and social media tool icons" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
@@ -55,7 +63,8 @@
             </p>
         </article>
     </section>
-
+    <!-- End of Article for Social Media Marketing-->
+    <!-- Aside for benefits-->
     <aside class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -64,6 +73,8 @@
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
+    <!-- End of aside for benefits-->
+    <!-- Aside for benefits-->
         <div class="benefit-brand">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="User with a Lightbulb head listening"/>
@@ -79,13 +90,16 @@
             </p>
         </div>
     </aside>
-
+    <!-- End of aside-->
+    <!-- End of Main Content-->
+    <!-- Site Footer-->
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
     </footer>
+    <!-- End of site footer-->
 </body>
 
 </html>
